parser/y.output

state 0
	$accept: .any_command $end 

	SELECT  shift 14
	INSERT  shift 15
	UPDATE  shift 16
	DELETE  shift 17
	SET  shift 18
	CREATE  shift 19
	ALTER  shift 20
	DROP  shift 22
	RENAME  shift 21
	ANALYZE  shift 23
	SHOW  shift 24
	DESCRIBE  shift 25
	EXPLAIN  shift 26
	.  error

	any_command  goto 1
	command  goto 2
	select_statement  goto 3
	insert_statement  goto 4
	update_statement  goto 5
	delete_statement  goto 6
	set_statement  goto 7
	create_statement  goto 8
	alter_statement  goto 9
	rename_statement  goto 10
	drop_statement  goto 11
	analyze_statement  goto 12
	other_statement  goto 13

state 1
	$accept:  any_command.$end 

	$end  accept
	.  error


state 2
	any_command:  command.    (1)

	.  reduce 1 (src line 149)


state 3
	command:  select_statement.    (2)
	select_statement:  select_statement.union_op select_statement 

	UNION  shift 28
	MINUS  shift 29
	EXCEPT  shift 30
	INTERSECT  shift 31
	.  reduce 2 (src line 155)

	union_op  goto 27

state 4
	command:  insert_statement.    (3)

	.  reduce 3 (src line 160)


state 5
	command:  update_statement.    (4)

	.  reduce 4 (src line 161)


state 6
	command:  delete_statement.    (5)

	.  reduce 5 (src line 162)


state 7
	command:  set_statement.    (6)

	.  reduce 6 (src line 163)


state 8
	command:  create_statement.    (7)

	.  reduce 7 (src line 164)


state 9
	command:  alter_statement.    (8)

	.  reduce 8 (src line 165)


state 10
	command:  rename_statement.    (9)

	.  reduce 9 (src line 166)


state 11
	command:  drop_statement.    (10)

	.  reduce 10 (src line 167)


state 12
	command:  analyze_statement.    (11)

	.  reduce 11 (src line 168)


state 13
	command:  other_statement.    (12)

	.  reduce 12 (src line 169)


state 14
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	$$34: .    (34)

	.  reduce 34 (src line 286)

	comment_opt  goto 32
	$$34  goto 33

state 15
	insert_statement:  INSERT.comment_opt INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT.comment_opt INTO dml_table_expression SET update_list on_dup_opt 
	$$34: .    (34)

	.  reduce 34 (src line 286)

	comment_opt  goto 34
	$$34  goto 33

state 16
	update_statement:  UPDATE.comment_opt dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 
	$$34: .    (34)

	.  reduce 34 (src line 286)

	comment_opt  goto 35
	$$34  goto 33

state 17
	delete_statement:  DELETE.comment_opt FROM dml_table_expression where_expression_opt order_by_opt limit_opt 
	$$34: .    (34)

	.  reduce 34 (src line 286)

	comment_opt  goto 36
	$$34  goto 33

state 18
	set_statement:  SET.comment_opt update_list 
	$$34: .    (34)

	.  reduce 34 (src line 286)

	comment_opt  goto 37
	$$34  goto 33

state 19
	create_statement:  CREATE.TABLE not_exists_opt ID force_eof 
	create_statement:  CREATE.constraint_opt INDEX sql_id using_opt ON ID force_eof 
	create_statement:  CREATE.VIEW sql_id force_eof 
	constraint_opt: .    (196)

	TABLE  shift 38
	VIEW  shift 40
	UNIQUE  shift 41
	.  reduce 196 (src line 1012)

	constraint_opt  goto 39

state 20
	alter_statement:  ALTER.ignore_opt TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER.ignore_opt TABLE ID RENAME to_opt ID 
	alter_statement:  ALTER.VIEW sql_id force_eof 
	ignore_opt: .    (187)

	VIEW  shift 43
	IGNORE  shift 44
	.  reduce 187 (src line 990)

	ignore_opt  goto 42

state 21
	rename_statement:  RENAME.TABLE ID TO ID 

	TABLE  shift 45
	.  error


state 22
	drop_statement:  DROP.TABLE exists_opt ID 
	drop_statement:  DROP.INDEX sql_id ON ID 
	drop_statement:  DROP.VIEW exists_opt sql_id force_eof 

	TABLE  shift 46
	INDEX  shift 47
	VIEW  shift 48
	.  error


state 23
	analyze_statement:  ANALYZE.TABLE ID 

	TABLE  shift 49
	.  error


state 24
	other_statement:  SHOW.force_eof 
	force_eof: .    (201)

	.  reduce 201 (src line 1028)

	force_eof  goto 50

state 25
	other_statement:  DESCRIBE.force_eof 
	force_eof: .    (201)

	.  reduce 201 (src line 1028)

	force_eof  goto 51

state 26
	other_statement:  EXPLAIN.force_eof 
	force_eof: .    (201)

	.  reduce 201 (src line 1028)

	force_eof  goto 52

state 27
	select_statement:  select_statement union_op.select_statement 

	SELECT  shift 14
	.  error

	select_statement  goto 53

state 28
	union_op:  UNION.    (38)
	union_op:  UNION.ALL 

	ALL  shift 54
	.  reduce 38 (src line 305)


state 29
	union_op:  MINUS.    (40)

	.  reduce 40 (src line 314)


state 30
	union_op:  EXCEPT.    (41)

	.  reduce 41 (src line 318)


state 31
	union_op:  INTERSECT.    (42)

	.  reduce 42 (src line 322)


state 32
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	distinct_opt: .    (43)

	DISTINCT  shift 56
	.  reduce 43 (src line 327)

	distinct_opt  goto 55

state 33
	comment_opt:  $$34.comment_list 
	comment_list: .    (36)

	.  reduce 36 (src line 296)

	comment_list  goto 57

state 34
	insert_statement:  INSERT comment_opt.INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt.INTO dml_table_expression SET update_list on_dup_opt 

	INTO  shift 58
	.  error


state 35
	update_statement:  UPDATE comment_opt.dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 60
	.  error

	dml_table_expression  goto 59

state 36
	delete_statement:  DELETE comment_opt.FROM dml_table_expression where_expression_opt order_by_opt limit_opt 

	FROM  shift 61
	.  error


state 37
	set_statement:  SET comment_opt.update_list 

	ID  shift 66
	.  error

	column_name  goto 64
	update_list  goto 62
	update_expression  goto 63
	sql_id  goto 65

state 38
	create_statement:  CREATE TABLE.not_exists_opt ID force_eof 
	not_exists_opt: .    (185)

	IF  shift 68
	.  reduce 185 (src line 985)

	not_exists_opt  goto 67

state 39
	create_statement:  CREATE constraint_opt.INDEX sql_id using_opt ON ID force_eof 

	INDEX  shift 69
	.  error


state 40
	create_statement:  CREATE VIEW.sql_id force_eof 

	ID  shift 71
	.  error

	sql_id  goto 70

state 41
	constraint_opt:  UNIQUE.    (197)

	.  reduce 197 (src line 1014)


state 42
	alter_statement:  ALTER ignore_opt.TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt.TABLE ID RENAME to_opt ID 

	TABLE  shift 72
	.  error


state 43
	alter_statement:  ALTER VIEW.sql_id force_eof 

	ID  shift 71
	.  error

	sql_id  goto 73

state 44
	ignore_opt:  IGNORE.    (188)

	.  reduce 188 (src line 992)


state 45
	rename_statement:  RENAME TABLE.ID TO ID 

	ID  shift 74
	.  error


state 46
	drop_statement:  DROP TABLE.exists_opt ID 
	exists_opt: .    (183)

	IF  shift 76
	.  reduce 183 (src line 980)

	exists_opt  goto 75

state 47
	drop_statement:  DROP INDEX.sql_id ON ID 

	ID  shift 71
	.  error

	sql_id  goto 77

state 48
	drop_statement:  DROP VIEW.exists_opt sql_id force_eof 
	exists_opt: .    (183)

	IF  shift 76
	.  reduce 183 (src line 980)

	exists_opt  goto 78

state 49
	analyze_statement:  ANALYZE TABLE.ID 

	ID  shift 79
	.  error


state 50
	other_statement:  SHOW force_eof.    (31)

	.  reduce 31 (src line 272)


state 51
	other_statement:  DESCRIBE force_eof.    (32)

	.  reduce 32 (src line 277)


state 52
	other_statement:  EXPLAIN force_eof.    (33)

	.  reduce 33 (src line 281)


state 53
	select_statement:  select_statement.union_op select_statement 
	select_statement:  select_statement union_op select_statement.    (14)

	.  reduce 14 (src line 176)

	union_op  goto 27

state 54
	union_op:  UNION ALL.    (39)

	.  reduce 39 (src line 310)


state 55
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	EXISTS  shift 97
	NULL  shift 101
	VALUES  shift 107
	ID  shift 84
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 89
	~  shift 105
	NOT  shift 88
	+  shift 103
	-  shift 104
	*  shift 82
	CASE  shift 108
	IF  shift 106
	.  error

	select_expression_list  goto 80
	select_expression  goto 81
	expression  goto 83
	boolean_expression  goto 85
	condition  goto 87
	value  goto 90
	value_expression  goto 86
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 56
	distinct_opt:  DISTINCT.    (44)

	.  reduce 44 (src line 331)


state 57
	comment_opt:  $$34 comment_list.    (35)
	comment_list:  comment_list.COMMENT 

	COMMENT  shift 109
	.  reduce 35 (src line 290)


state 58
	insert_statement:  INSERT comment_opt INTO.dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt INTO.dml_table_expression SET update_list on_dup_opt 

	ID  shift 60
	.  error

	dml_table_expression  goto 110

state 59
	update_statement:  UPDATE comment_opt dml_table_expression.SET update_list where_expression_opt order_by_opt limit_opt 

	SET  shift 111
	.  error


state 60
	dml_table_expression:  ID.    (76)
	dml_table_expression:  ID.. ID 

	.  shift 112
	.  reduce 76 (src line 476)


state 61
	delete_statement:  DELETE comment_opt FROM.dml_table_expression where_expression_opt order_by_opt limit_opt 

	ID  shift 60
	.  error

	dml_table_expression  goto 113

state 62
	set_statement:  SET comment_opt update_list.    (19)
	update_list:  update_list., update_expression 

	,  shift 114
	.  reduce 19 (src line 209)


state 63
	update_list:  update_expression.    (180)

	.  reduce 180 (src line 964)


state 64
	update_expression:  column_name.= value_expression 

	=  shift 115
	.  error


state 65
	column_name:  sql_id.    (144)

	.  reduce 144 (src line 788)


state 66
	column_name:  ID.. sql_id 
	sql_id:  ID.    (200)

	.  shift 116
	.  reduce 200 (src line 1022)


state 67
	create_statement:  CREATE TABLE not_exists_opt.ID force_eof 

	ID  shift 117
	.  error


state 68
	not_exists_opt:  IF.NOT EXISTS 

	NOT  shift 118
	.  error


state 69
	create_statement:  CREATE constraint_opt INDEX.sql_id using_opt ON ID force_eof 

	ID  shift 71
	.  error

	sql_id  goto 119

state 70
	create_statement:  CREATE VIEW sql_id.force_eof 
	force_eof: .    (201)

	.  reduce 201 (src line 1028)

	force_eof  goto 120

state 71
	sql_id:  ID.    (200)

	.  reduce 200 (src line 1022)


state 72
	alter_statement:  ALTER ignore_opt TABLE.ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE.ID RENAME to_opt ID 

	ID  shift 121
	.  error


state 73
	alter_statement:  ALTER VIEW sql_id.force_eof 
	force_eof: .    (201)

	.  reduce 201 (src line 1028)

	force_eof  goto 122

state 74
	rename_statement:  RENAME TABLE ID.TO ID 

	TO  shift 123
	.  error


state 75
	drop_statement:  DROP TABLE exists_opt.ID 

	ID  shift 124
	.  error


state 76
	exists_opt:  IF.EXISTS 

	EXISTS  shift 125
	.  error


state 77
	drop_statement:  DROP INDEX sql_id.ON ID 

	ON  shift 126
	.  error


state 78
	drop_statement:  DROP VIEW exists_opt.sql_id force_eof 

	ID  shift 71
	.  error

	sql_id  goto 127

state 79
	analyze_statement:  ANALYZE TABLE ID.    (30)

	.  reduce 30 (src line 266)


state 80
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	select_expression_list:  select_expression_list., select_expression 

	FROM  shift 128
	,  shift 129
	.  error


state 81
	select_expression_list:  select_expression.    (45)

	.  reduce 45 (src line 336)


state 82
	select_expression:  *.    (47)

	.  reduce 47 (src line 346)


state 83
	select_expression:  expression.as_lower_opt 
	as_lower_opt: .    (52)

	AS  shift 132
	ID  shift 71
	.  reduce 52 (src line 370)

	as_lower_opt  goto 130
	sql_id  goto 131

state 84
	select_expression:  ID.. * 
	column_name:  ID.. sql_id 
	sql_id:  ID.    (200)

	.  shift 133
	.  reduce 200 (src line 1022)


state 85
	expression:  boolean_expression.    (50)
	boolean_expression:  boolean_expression.AND boolean_expression 
	boolean_expression:  boolean_expression.OR boolean_expression 

	OR  shift 135
	AND  shift 134
	.  reduce 50 (src line 360)


state 86
	expression:  value_expression.    (51)
	condition:  value_expression.compare value_expression 
	condition:  value_expression.IN col_tuple 
	condition:  value_expression.NOT IN col_tuple 
	condition:  value_expression.LIKE value_expression 
	condition:  value_expression.NOT LIKE value_expression 
	condition:  value_expression.BETWEEN value_expression AND value_expression 
	condition:  value_expression.NOT BETWEEN value_expression AND value_expression 
	condition:  value_expression.IS NULL 
	condition:  value_expression.IS NOT NULL 
	value_expression:  value_expression.& value_expression 
	value_expression:  value_expression.| value_expression 
	value_expression:  value_expression.^ value_expression 
	value_expression:  value_expression.+ value_expression 
	value_expression:  value_expression.- value_expression 
	value_expression:  value_expression.* value_expression 
	value_expression:  value_expression./ value_expression 
	value_expression:  value_expression.% value_expression 

	IN  shift 137
	IS  shift 141
	LIKE  shift 139
	BETWEEN  shift 140
	LE  shift 153
	GE  shift 154
	NE  shift 155
	NULL_SAFE_EQUAL  shift 156
	=  shift 150
	<  shift 151
	>  shift 152
	NOT  shift 138
	&  shift 142
	|  shift 143
	^  shift 144
	+  shift 145
	-  shift 146
	*  shift 147
	/  shift 148
	%  shift 149
	.  reduce 51 (src line 365)

	compare  goto 136

state 87
	boolean_expression:  condition.    (86)

	.  reduce 86 (src line 522)


state 88
	boolean_expression:  NOT.boolean_expression 

	EXISTS  shift 97
	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 89
	~  shift 105
	NOT  shift 88
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	boolean_expression  goto 157
	condition  goto 87
	value  goto 90
	value_expression  goto 158
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 89
	boolean_expression:  (.boolean_expression ) 
	subquery:  (.select_statement ) 
	row_tuple:  (.value_expression_list ) 

	SELECT  shift 14
	EXISTS  shift 97
	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 89
	~  shift 105
	NOT  shift 88
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	select_statement  goto 160
	boolean_expression  goto 159
	condition  goto 87
	value  goto 90
	value_expression  goto 162
	value_expression_list  goto 161
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 90
	value_expression:  value.    (114)

	.  reduce 114 (src line 643)


state 91
	value_expression:  column_name.    (115)

	.  reduce 115 (src line 648)


state 92
	value_expression:  row_tuple.    (116)

	.  reduce 116 (src line 652)


state 93
	value_expression:  unary_operator.value_expression 

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	value  goto 90
	value_expression  goto 163
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 94
	value_expression:  sql_id.( ) 
	value_expression:  sql_id.( select_expression_list ) 
	value_expression:  sql_id.( DISTINCT select_expression_list ) 
	column_name:  sql_id.    (144)

	(  shift 165
	.  reduce 144 (src line 788)


state 95
	value_expression:  keyword_as_func.( select_expression_list ) 

	(  shift 166
	.  error


state 96
	value_expression:  case_expression.    (130)

	.  reduce 130 (src line 719)


state 97
	condition:  EXISTS.subquery 

	(  shift 168
	.  error

	subquery  goto 167

state 98
	value:  STRING.    (146)

	.  reduce 146 (src line 798)


state 99
	value:  NUMBER.    (147)

	.  reduce 147 (src line 803)


state 100
	value:  VALUE_ARG.    (148)

	.  reduce 148 (src line 807)


state 101
	value:  NULL.    (149)

	.  reduce 149 (src line 811)


state 102
	row_tuple:  subquery.    (179)

	.  reduce 179 (src line 959)


state 103
	unary_operator:  +.    (133)

	.  reduce 133 (src line 734)


state 104
	unary_operator:  -.    (134)

	.  reduce 134 (src line 739)


state 105
	unary_operator:  ~.    (135)

	.  reduce 135 (src line 743)


state 106
	keyword_as_func:  IF.    (131)

	.  reduce 131 (src line 724)


state 107
	keyword_as_func:  VALUES.    (132)

	.  reduce 132 (src line 729)


state 108
	case_expression:  CASE.value_expression_opt when_expression_list else_expression_opt END 
	value_expression_opt: .    (137)

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  reduce 137 (src line 754)

	value  goto 90
	value_expression  goto 170
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	value_expression_opt  goto 169
	sql_id  goto 94

state 109
	comment_list:  comment_list COMMENT.    (37)

	.  reduce 37 (src line 300)


state 110
	insert_statement:  INSERT comment_opt INTO dml_table_expression.column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt INTO dml_table_expression.SET update_list on_dup_opt 
	column_list_opt: .    (168)

	SET  shift 172
	(  shift 173
	.  reduce 168 (src line 906)

	column_list_opt  goto 171

state 111
	update_statement:  UPDATE comment_opt dml_table_expression SET.update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 66
	.  error

	column_name  goto 64
	update_list  goto 174
	update_expression  goto 63
	sql_id  goto 65

state 112
	dml_table_expression:  ID ..ID 

	ID  shift 175
	.  error


state 113
	delete_statement:  DELETE comment_opt FROM dml_table_expression.where_expression_opt order_by_opt limit_opt 
	where_expression_opt: .    (84)

	WHERE  shift 177
	.  reduce 84 (src line 513)

	where_expression_opt  goto 176

state 114
	update_list:  update_list ,.update_expression 

	ID  shift 66
	.  error

	column_name  goto 64
	update_expression  goto 178
	sql_id  goto 65

state 115
	update_expression:  column_name =.value_expression 

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	value  goto 90
	value_expression  goto 179
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 116
	column_name:  ID ..sql_id 

	ID  shift 71
	.  error

	sql_id  goto 180

state 117
	create_statement:  CREATE TABLE not_exists_opt ID.force_eof 
	force_eof: .    (201)

	.  reduce 201 (src line 1028)

	force_eof  goto 181

state 118
	not_exists_opt:  IF NOT.EXISTS 

	EXISTS  shift 182
	.  error


state 119
	create_statement:  CREATE constraint_opt INDEX sql_id.using_opt ON ID force_eof 
	using_opt: .    (198)

	USING  shift 184
	.  reduce 198 (src line 1017)

	using_opt  goto 183

state 120
	create_statement:  CREATE VIEW sql_id force_eof.    (22)

	.  reduce 22 (src line 225)


state 121
	alter_statement:  ALTER ignore_opt TABLE ID.non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE ID.RENAME to_opt ID 

	ORDER  shift 190
	DEFAULT  shift 188
	ID  shift 191
	ALTER  shift 187
	DROP  shift 189
	RENAME  shift 186
	.  error

	non_rename_operation  goto 185

state 122
	alter_statement:  ALTER VIEW sql_id force_eof.    (25)

	.  reduce 25 (src line 240)


state 123
	rename_statement:  RENAME TABLE ID TO.ID 

	ID  shift 192
	.  error


state 124
	drop_statement:  DROP TABLE exists_opt ID.    (27)

	.  reduce 27 (src line 251)


state 125
	exists_opt:  IF EXISTS.    (184)

	.  reduce 184 (src line 982)


state 126
	drop_statement:  DROP INDEX sql_id ON.ID 

	ID  shift 193
	.  error


state 127
	drop_statement:  DROP VIEW exists_opt sql_id.force_eof 
	force_eof: .    (201)

	.  reduce 201 (src line 1028)

	force_eof  goto 194

state 128
	select_statement:  SELECT comment_opt distinct_opt select_expression_list FROM.table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	ID  shift 199
	(  shift 198
	.  error

	table_expression_list  goto 195
	table_expression  goto 196
	simple_table_expression  goto 197
	subquery  goto 200

state 129
	select_expression_list:  select_expression_list ,.select_expression 

	EXISTS  shift 97
	NULL  shift 101
	VALUES  shift 107
	ID  shift 84
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 89
	~  shift 105
	NOT  shift 88
	+  shift 103
	-  shift 104
	*  shift 82
	CASE  shift 108
	IF  shift 106
	.  error

	select_expression  goto 201
	expression  goto 83
	boolean_expression  goto 85
	condition  goto 87
	value  goto 90
	value_expression  goto 86
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 130
	select_expression:  expression as_lower_opt.    (48)

	.  reduce 48 (src line 351)


state 131
	as_lower_opt:  sql_id.    (53)

	.  reduce 53 (src line 374)


state 132
	as_lower_opt:  AS.sql_id 

	ID  shift 71
	.  error

	sql_id  goto 202

state 133
	select_expression:  ID ..* 
	column_name:  ID ..sql_id 

	ID  shift 71
	*  shift 203
	.  error

	sql_id  goto 180

state 134
	boolean_expression:  boolean_expression AND.boolean_expression 

	EXISTS  shift 97
	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 89
	~  shift 105
	NOT  shift 88
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	boolean_expression  goto 204
	condition  goto 87
	value  goto 90
	value_expression  goto 158
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 135
	boolean_expression:  boolean_expression OR.boolean_expression 

	EXISTS  shift 97
	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 89
	~  shift 105
	NOT  shift 88
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	boolean_expression  goto 205
	condition  goto 87
	value  goto 90
	value_expression  goto 158
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 136
	condition:  value_expression compare.value_expression 

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	value  goto 90
	value_expression  goto 206
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 137
	condition:  value_expression IN.col_tuple 

	LIST_ARG  shift 210
	(  shift 208
	.  error

	col_tuple  goto 207
	subquery  goto 209

state 138
	condition:  value_expression NOT.IN col_tuple 
	condition:  value_expression NOT.LIKE value_expression 
	condition:  value_expression NOT.BETWEEN value_expression AND value_expression 

	IN  shift 211
	LIKE  shift 212
	BETWEEN  shift 213
	.  error


state 139
	condition:  value_expression LIKE.value_expression 

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	value  goto 90
	value_expression  goto 214
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 140
	condition:  value_expression BETWEEN.value_expression AND value_expression 

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	value  goto 90
	value_expression  goto 215
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 141
	condition:  value_expression IS.NULL 
	condition:  value_expression IS.NOT NULL 

	NULL  shift 216
	NOT  shift 217
	.  error


state 142
	value_expression:  value_expression &.value_expression 

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	value  goto 90
	value_expression  goto 218
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 143
	value_expression:  value_expression |.value_expression 

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	value  goto 90
	value_expression  goto 219
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 144
	value_expression:  value_expression ^.value_expression 

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	value  goto 90
	value_expression  goto 220
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 145
	value_expression:  value_expression +.value_expression 

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	value  goto 90
	value_expression  goto 221
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 146
	value_expression:  value_expression -.value_expression 

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	value  goto 90
	value_expression  goto 222
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 147
	value_expression:  value_expression *.value_expression 

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	value  goto 90
	value_expression  goto 223
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 148
	value_expression:  value_expression /.value_expression 

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	value  goto 90
	value_expression  goto 224
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 149
	value_expression:  value_expression %.value_expression 

	NULL  shift 101
	VALUES  shift 107
	ID  shift 66
	STRING  shift 98
	NUMBER  shift 99
	VALUE_ARG  shift 100
	(  shift 164
	~  shift 105
	+  shift 103
	-  shift 104
	CASE  shift 108
	IF  shift 106
	.  error

	value  goto 90
	value_expression  goto 225
	row_tuple  goto 92
	keyword_as_func  goto 95
	subquery  goto 102
	unary_operator  goto 93
	column_name  goto 91
	case_expression  goto 96
	sql_id  goto 94

state 150
	compare:  =.    (101)

	.  reduce 101 (src line 583)


state 151
	compare:  <.    (102)

	.  reduce 102 (src line 588)


state 152
	compare:  >.    (103)

	.  reduce 103 (src line 592)


state 153
	compare:  LE.    (104)

	.  reduce 104 (src line 596)


state 154
	compare:  GE.    (105)

	.  reduce 105 (src line 600)


state 155
	compare:  NE.    (106)

	.  reduce 106 (src line 604)


state 156
	compare:  NULL_SAFE_EQUAL.    (107)

	.  reduce 107 (src line 608)


state 157
	boolean_expression:  boolean_expression.AND boolean_expression 
	boolean_expression:  boolean_expression.OR boolean_expression 
	boolean_expression:  NOT boolean_expression.    (89)

	.  reduce 89 (src line 532)

